add-swagger: Enable search by type of trip